Fixed map on mobile

--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ main {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: var(--primary);
+    background-color: var(--secondary);
     color: white;
     display: flex;
     align-items: center;
@@ -586,9 +586,9 @@ footer {
     }
 
     .grave {
-        width: 120px;
-        height: 60px;
-        font-size: 0.8rem;
+        width: 80px;
+        height: 40px;
+        font-size: 0.6rem;
         z-index: 5;
     }
 
@@ -624,18 +624,19 @@ footer {
 
 @media (max-width: 480px) {
     .grave {
-        width: 100px;
-        height: 50px;
-        font-size: 0.7rem;
+        width: 70px;
+        height: 35px;
+        font-size: 0.2rem;
         z-index: 5;
     }
 
     .plot-attachment {
-        font-size: 1rem;
+        font-size: 0.8rem;
         margin-bottom: 0.2rem;
     }
 
     .cemetery-map {
-        min-height: 500px;
+        min-height: 720px;
+        min-width: 1100px;
     }
 }
